5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1822_1639.log
== TEST (2019-06-13 11:03:37) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in v:
	if v[i] % 2 == 0:
		par = par + 1
print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:04:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:02) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	v2[ps] = v[pe]
	ps = ps + 1
pe = pe + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:48) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[i] % 2 == 0:
		v2[i] = v[i]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[i] % 2 == 0:
		v2[ps] = v[pe]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v2[ps] = v[pe]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:40) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v2[i] = v[i]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:49) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v2[i] = v[i]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:47) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v[b]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:15) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[b]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:21:43) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[0] = v2[0]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[0] = v2[0]
		v[1] = v2[1]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[b]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:53) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(6, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[b]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:01) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(6, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[b]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:43) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[pe] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
		v[pe] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
File "XXXX", line 19
    ps = ps + 1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:13) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
		v[pe] = v2[ps]
		pe = pe + 1
ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:51) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[pe] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:31) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		v[b] = v2[ps]
		pe = pe + 1
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:27) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		pe = pe + v2[b]
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[b] % 2 == 0:
		pe = pe + v2[b]
	ps = ps + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:14) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	pe = pe + 1
	if v[b] % 2 == 0:
		v[b] = v2[ps]
	ps = ps + 1
print(v2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:28) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	pe = pe + 1
	if v[b] % 2 == 0:
		v[b] = v2[ps]
	ps = ps + 1
print(v2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	pe = pe + 1
	if v[b] % 2 == 0:
		v2[ps] = v2[pe]
	ps = ps + 1
print(v2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	pe = pe + 1
	if v[b] % 2 == 0:
		v2[ps] = v2[pe]
	ps = ps + 1
print(v2)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:14) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

pe = 0
ps = 0

for b in range(size(v)):
	if v[0] % 2 == 0:
		v[0] = v2[0]
	elif v[1] % 2 == 0:
		v[1] = v2[1]
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:13) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

j = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		v2[j] = i
		j = j + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:50:27) 
-- CODE:
from numpy import *
v = array(eval(input("Digite o vetor: ")))

par = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		par = par + 1
print(par)

v2 = zeros(par, dtype=int)

j = 0

for i in range(size(v)):
	if v[i] % 2 == 0:
		v2[j] = i
		j = j + 1
print(v2)
-- EXECUTION TIME:
0.894928
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0 1 6 8 11 12]
---- user output:
6
[ 0  1  6  8 11 12]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 4 7 8]
---- user output:
5
[0 1 4 7 8]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
6
[0 1 4 6 7 8]
---- user output:
6
[0 1 4 6 7 8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
